fixed the contact social alignment

--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ h6 {
 
 p {
     line-height: 26px;
+    /*text-align: justify; !*This is added by NN*!*/
 }
 
 ul {
@@ -1958,4 +1959,29 @@ footer p {
 
 .privacy-policy {
     margin-left: 1vw
+}
+
+
+/***
+
+====================================================================
+  Contact Social Div
+====================================================================
+
+ ***/
+
+.contact-social {
+    text-align: justify;
+    padding-right: 50px;
+}
+
+.contact-social:after {
+    content: ' ';
+    display: inline-block;
+    width: 100%;
+    height: 0
+}
+
+.contact-social > span {
+    display: inline-block
 }
